--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "history": "^5.3.0",
     "jquery": "^3.6.3",
     "jwt-decode": "^3.1.2",
     "owl.carousel": "^2.3.4",
