--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "@fullcalendar/daygrid": "^6.1.5",
     "@fullcalendar/react": "^6.1.5",
     "@hookform/resolvers": "^2.9.11",
-    "@metamask/detect-provider": "^2.0.0",
-    "@stripe/stripe-js": "^1.52.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@metamask/detect-provider": "^2.0.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "@mui/styled-engine": "^5.11.16",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@stripe/stripe-js": "^1.52.0",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -74,6 +74,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "^2.7.2",
     "react-cookie": "^4.1.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -86,17 +87,9 @@
     "react-modal": "^3.16.1",
     "react-notifications": "^1.7.4",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.1",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "stripe": "^11.16.0",
-    "usehooks-ts": "^2.9.1",
-    "web-vitals": "^2.1.4",
-    "web3": "^1.9.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
@@ -104,14 +97,18 @@
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.6.1",
     "source-map-loader": "^3.0.0",
     "stream-http": "^3.2.0",
+    "stripe": "^11.16.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "url": "^0.11.0",
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4",
+    "web3": "^1.9.0",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
