--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "buffer": "^6.0.3",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "chat-engine": "^0.9.21",
     "clarifai": "^2.9.1",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
