--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0",
-
-    "@reduxjs/toolkit": "^1.9.3",
-    "@stripe/react-stripe-js": "^2.1.0",
+    "@ant-design/icons": "^5.0.1",
     "@babel/core": "^7.16.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -24,11 +22,14 @@
     "@mui/material": "^5.11.16",
     "@mui/styled-engine": "^5.11.16",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.0",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.4.6",
     "assert": "^2.0.0",
     "awesome-notifications": "^3.1.3",
     "axios": "^1.3.4",
@@ -38,12 +39,12 @@
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "bootstrap": "^5.2.3",
-    "buffer": "^6.0.3",
-    "clarifai": "^2.9.1",
-
     "browserslist": "^4.18.1",
+    "buffer": "^6.0.3",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "clarifai": "^2.9.1",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "custom-pointer-react": "^0.0.4",
@@ -57,25 +58,26 @@
     "fs-extra": "^10.0.0",
     "google-maps-react": "^2.0.6",
     "history": "^5.3.0",
-    "install": "^0.13.0",
-    "lottie-react-web": "^2.2.2",
-    "lottie-web": "^5.10.2",
-    "moment": "^2.29.4",
-    "npm": "^9.6.2",
-    "nsfwjs": "^2.4.2",
-    "path": "^0.12.7",
     "html-webpack-plugin": "^5.5.0",
     "https-browserify": "^1.0.0",
     "identity-obj-proxy": "^3.0.0",
+    "install": "^0.13.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "jquery": "^3.6.3",
     "jwt-decode": "^3.1.2",
+    "lottie-react-web": "^2.2.2",
+    "lottie-web": "^5.10.2",
     "mapbox-gl": "^2.13.0",
     "mapbox-gl-geocoder": "^2.0.1",
+    "mic-recorder-to-mp3": "^2.2.2",
     "mini-css-extract-plugin": "^2.4.5",
+    "moment": "^2.29.4",
+    "npm": "^9.6.2",
+    "nsfwjs": "^2.4.2",
     "owl.carousel": "^2.3.4",
+    "path": "^0.12.7",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
@@ -87,20 +89,23 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "react-audio-player": "^0.17.0",
+    "react-audio-voice-recorder": "^1.0.10",
     "react-bootstrap": "^2.7.2",
     "react-cookie": "^4.1.1",
-
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-facebook": "^9.0.12",
     "react-facebook-login": "^4.1.1",
     "react-google-recaptcha": "^2.1.0",
+    "react-h5-audio-player": "^3.8.6",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
-
+    "react-intl": "^6.4.2",
     "react-leaflet": "^4.2.1",
+    "react-mic": "^12.4.6",
     "react-modal": "^3.16.1",
     "react-notifications": "^1.7.4",
     "react-push-notification": "^1.3.0",
@@ -108,26 +113,26 @@
     "react-redux": "^8.0.5",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.8.1",
-    "styled-components": "^5.3.9",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.1",
+    "react-speech-recognition": "^3.10.0",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "stream": "^0.0.2",
-    "use-sound": "^4.0.1",
-    "zlib": "^1.0.5",
-
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
+    "ssr": "^6.2.46",
+    "stream": "^0.0.2",
     "stream-http": "^3.2.0",
     "stripe": "^11.16.0",
     "style-loader": "^3.3.1",
+    "styled-components": "^5.3.9",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "url": "^0.11.0",
+    "use-sound": "^4.0.1",
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4",
     "web3": "^1.9.0",
@@ -135,7 +140,8 @@
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -211,6 +217,7 @@
     ]
   },
   "devDependencies": {
+    "html-loader": "^4.2.0",
     "webpack-cli": "^5.0.1"
   }
 }
