--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-bootstrap": "^2.7.2",
     "react-chat-engine": "^1.11.28",
     "react-cookie": "^4.1.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -115,6 +116,8 @@
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.6.1",
     "source-map-loader": "^3.0.0",
     "stream": "^0.0.2",
     "stream-http": "^3.2.0",
