--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "react-audio-player": "^0.17.0",
+    "react-audio-voice-recorder": "^1.1.0",
     "react-bootstrap": "^2.7.2",
     "react-chat-engine": "^1.11.28",
     "react-cookie": "^4.1.1",
@@ -108,6 +110,7 @@
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-toastify": "^9.1.1",
     "react-webcam": "^7.0.1",
     "redux": "^4.2.1",
